fix align

--- a/app/assets/stylesheets/editor-3/notifier.css.scss
+++ b/app/assets/stylesheets/editor-3/notifier.css.scss
@@ -53,6 +53,6 @@
 }
 
 .Notifier-icon {
-  margin-top: 2px;
+  margin-top: 1px;
 }
 
